aks-poland-central/apps/janus/janus.yaml
apiVersion: v1
kind: Service
metadata:
  name: janus-gateway
  labels:
    app.kubernetes.io/name: janus-gateway
    app.kubernetes.io/instance: janus
    app.kubernetes.io/version: "v1.2.4"
spec:
  type: ClusterIP
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
      name: http
    - port: 8188
      targetPort: 8188
      protocol: TCP
      name: websocket
  selector:
    app.kubernetes.io/name: janus-gateway
    app.kubernetes.io/instance: janus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: janus-gateway
  labels:
    app.kubernetes.io/name: janus-gateway
    app.kubernetes.io/instance: janus
    app.kubernetes.io/version: "v1.2.4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: janus-gateway
      app.kubernetes.io/instance: janus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: janus-gateway
        app.kubernetes.io/instance: janus
    spec:
      terminationGracePeriodSeconds: 18000 # 5 hours
      containers:
        - name: janus-gateway
          image: "megzo/janus-gateway:v1.2.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8088
              protocol: TCP
            - name: websocket
              containerPort: 8188
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: janus-web
  labels:
    app.kubernetes.io/name: janus-web
    app.kubernetes.io/instance: janus-web
    app.kubernetes.io/version: "v1.2.4"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: janus-web
    app.kubernetes.io/instance: janus-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: janus-web
  labels:
    app.kubernetes.io/name: janus-web
    app.kubernetes.io/instance: janus-web
    app.kubernetes.io/version: "v1.2.4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: janus-web
      app.kubernetes.io/instance: janus-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: janus-web
        app.kubernetes.io/instance: janus-web
    spec:
      containers:
        - name: janus-web
          image: "megzo/janus-web"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/demos/settings.js
              subPath: settings.js
      volumes:
      - name: config
        configMap:
          name: janus-web
          items:
          - key: settings.js
            path: settings.js
---
# Ingress for both Janus Gateway and Janus Web Demos
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: janus-web-demos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - janus.aks-poland-central.stunner.cc
      - janus-gateway.aks-poland-central.stunner.cc
    secretName: janus-web-secret-tls
  rules:
  - host: janus-gateway.aks-poland-central.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: janus-gateway
            port:
              number: 8188
  - host: janus.aks-poland-central.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: janus-web
            port:
              number: 80
